--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "inquirer": "^0.9.0",
     "js-nacl": "^0.6.0",
     "request": "^2.62.0",
-    "rmdir": "^1.1.0"
+    "rmdir": "^1.1.0",
     "npm": "^3.9.5"
   },
   "bugs": {
