--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "js-nacl": "^0.6.0",
     "request": "^2.62.0",
     "rmdir": "^1.1.0",
-    "npm": "^3.9.5"
+    "npm": "^3.9.5",
+    "valid-url": "=1.0.9"
   },
   "bugs": {
     "url": "https://github.com/LiskHQ/lisk-cli/issues"
