--- a/package.json
+++ b/package.json
@@ -18,17 +18,17 @@
   "author": "Boris Povod <boris@crypti.me>, Pavel Nekrasov <landgraf.paul@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "browserify-bignum": "^1.3.0-2",
-    "bitcore-mnemonic": "^0.10.1",
-    "bytebuffer": "^4.0.0",
-    "commander": "^2.8.1",
-    "crypto-browserify": "^3.9.14",
-    "gift": "^0.6.1",
-    "inquirer": "^0.9.0",
-    "js-nacl": "^0.6.0",
-    "request": "^2.62.0",
-    "rmdir": "^1.1.0",
-    "npm": "^3.9.5",
+    "browserify-bignum": "=1.3.0-2",
+    "bitcore-mnemonic": "=1.1.1",
+    "bytebuffer": "=5.0.1",
+    "commander": "=2.9.0",
+    "crypto-browserify": "=3.11.0",
+    "gift": "=0.9.0",
+    "inquirer": "=0.9.0",
+    "js-nacl": "=0.6.0",
+    "request": "=2.74.0",
+    "rmdir": "=1.2.0",
+    "npm": "^3.10.7",
     "valid-url": "=1.0.9"
   },
   "bugs": {
