--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "crypto-browserify": "=3.11.0",
     "gift": "=0.9.0",
     "inquirer": "=0.9.0",
-    "js-nacl": "=0.6.0",
+    "js-nacl": "LiskHQ/js-nacl#6dc1417",
     "request": "=2.74.0",
     "rmdir": "=1.2.0",
     "npm": "^3.10.7",
